--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
         <source src="Head Over Heels (mp3cut.net).mp3" type="audio/mpeg">
     </audio>
 
-    <script>
-        const audio = document.getElementById('background-music');
-        audio.muted = true; // Start muted to bypass autoplay restrictions
-        audio.play().then(() => {
-            audio.muted = false; // Unmute after playback starts
-        }).catch(err => {
-            console.error("Autoplay blocked:", err);
-            document.body.addEventListener('click', () => {
-                audio.play();
+      <script>
+        // Add an event listener to start playback on user interaction
+        document.body.addEventListener('click', () => {
+            const audio = document.getElementById('background-music');
+            audio.play().then(() => {
+                console.log("Playback started successfully.");
+            }).catch(err => {
+                console.error("Error starting playback:", err);
             });
-        });
+        }, { once: true }); // Ensures the event runs only once
     </script>
 
 
