--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h1>Will you be my Valentine?</h1>
+        <h2>Click/tap the background first though ;)</h2>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
