--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A simple website</title>
+    <title>Will you be my Valentine?</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
-    <meta property=”og:image” content=”thumbnail.jpg”>
+    <meta property=’og:title’ content='Simon's Portfolio'/>
+    <meta property=’og:image’ content='thumbnail.jpg’/>
+    <meta property=’og:description’ content='A simple website?'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
 </head>
 <body>
     <div class="container">
