--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <meta property=’og:title’ content='Simon's Portfolio'/>
-    <meta property=’og:image’ content='thumbnail.jpg’/>
+    <meta property=’og:image’ content='thumbnail.jpg' />
     <meta property=’og:description’ content='A simple website?'/>
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
 </head>
 <body>
     <div class="container">
