--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:title" content='Simon's Portfolio'/>
-    <meta property="og:image" content="thumbnail.jpg" />
+    <meta property="og:image" content="thumbnail_new.jpg" />
     <meta property="og:description" content='A simple website?'/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
