--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <!-- Hidden Audio Element -->
     <audio id="background-music" autoplay style="display: none;">
-        <source src="Head Over Heels (mp3cut.net).mp3" type="audio/mpeg">
+        <source src="bg.mp3" type="audio/mpeg">
     </audio>
 
       <script>
